--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@hexlet/code",
   "version": "1.0.0",
   "description": "[![Actions Status](https://github.com/Reyka141/frontend-project-46/actions/workflows/hexlet-check.yml/badge.svg)](https://github.com/Reyka141/frontend-project-46/actions)",
-  "main": "index.js",
+  "main": "bin/gendiff.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -18,8 +18,8 @@
   "devDependencies": {
     "@eslint/create-config": "^1.0.0",
     "@eslint/js": "^9.4.0",
+    "@types/node": "^20.14.2",
     "eslint": "^9.4.0",
     "globals": "^15.4.0"
   }
-  
 }
