--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@hexlet/code",
+  "name": "@hexlet/difference-calculator",
   "version": "1.0.0",
-  "description": "[![Actions Status](https://github.com/Reyka141/frontend-project-46/actions/workflows/hexlet-check.yml/badge.svg)](https://github.com/Reyka141/frontend-project-46/actions)",
+  "description": "Compares the first .json file with the second and outputs the result",
   "main": "bin/gendiff.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npx jest"
   },
   "type": "module",
   "author": "Andrii Veduta",
