--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "pre-push": "make lint"
   },
   "scripts": {
-    "test": "npx jest"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -23,7 +23,6 @@
   },
   "type": "module",
   "homepage": "https://github.com/Reyka141/frontend-project-46#readme",
-  
   "dependencies": {
     "commander": "^12.1.0",
     "lodash": "^4.17.21"
@@ -31,8 +30,10 @@
   "devDependencies": {
     "@eslint/create-config": "^1.0.0",
     "@eslint/js": "^9.4.0",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20.14.2",
     "eslint": "^9.4.0",
-    "globals": "^15.4.0"
+    "globals": "^15.4.0",
+    "jest": "^29.7.0"
   }
 }
