--- a/.github/workflows/Github-actions.yml
+++ b/.github/workflows/Github-actions.yml
@@ -15,5 +15,6 @@ jobs:
           node-version: 20
       - run: npm ci
       - run: npm test
+      - run: make test-coverage
       - run: make lint
 
