--- a/package.json
+++ b/package.json
@@ -30,11 +30,17 @@
   },
   "devDependencies": {
     "@eslint/create-config": "^1.0.0",
-    "@eslint/js": "^9.4.0",
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.5.0",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.14.2",
-    "eslint": "^9.4.0",
-    "globals": "^15.4.0",
+    "eslint": "^8.57.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jsx-a11y": "^6.9.0",
+    "eslint-plugin-react": "^7.34.3",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "globals": "^15.6.0",
     "jest": "^29.7.0"
   }
 }
