--- a/__fixtures__/file2.yml
+++ b/__fixtures__/file2.yml
@@ -1,31 +1,49 @@
 {
-    "common": {
-      "follow": false,
-      "setting1": "Value 1",
-      "setting3": null,
-      "setting4": "blah blah",
-      "setting5": {
-        "key5": "value5"
-      },
-      "setting6": {
-        "key": "value",
-        "ops": "vops",
-        "doge": {
-          "wow": "so much"
-        }
+  "common": {
+    "follow": false,
+    "setting1": "Value 1",
+    "setting3": {
+      "key": "value"
+    },
+    "setting4": "blah blah",
+    "setting5": {
+      "key5": "value5"
+    },
+    "setting6": {
+      "key": "value",
+      "ops": "vops",
+      "doge": {
+        "wow": "so much"
+      }
+    }
+  },
+
+  "group1": {
+    "foo": "bar",
+    "baz": "bars",
+    "nest": "str"
+  },
+
+  "group3": {
+    "deep": {
+      "id": {
+        "number": 45
       }
     },
-    "group1": {
-      "foo": "bar",
-      "baz": "bars",
-      "nest": "str"
+    "fee": 100500
+  },
+
+  "group4": {
+    "default": "",
+    "foo": null,
+    "isNested": "none",
+    "key": false,
+    "nest": {
+      "bar": 0
     },
-    "group3": {
-      "deep": {
-        "id": {
-          "number": 45
-        }
-      },
-      "fee": 100500
-    }
-  }
+    "someKey": true,
+    "type": "bar"
+  },
+  
+  "language": "js"
+}
