--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "eslint-plugin-react": "^7.34.3",
     "eslint-plugin-react-hooks": "^4.6.2",
     "globals": "^15.6.0",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "jest-cli": "^29.7.0"
   }
 }
