--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "bin": {
     "gendiff": "bin/gendiff.js"
   },
-  "main": "bin/gendiff.js",
+  "main": "src/gendiff-dif.js",
   "simple-git-hooks": {
     "pre-push": "make lint"
   },
